--- a/reports/wordembedding/acl2014.tex
+++ b/reports/wordembedding/acl2014.tex
@@ -28,7 +28,7 @@
 % in the camera-ready version and ask you to change it back.
 
 
-\title{Instructions for ACL-2014 Proceedings}
+\title{Translation invariant Word Embeddings}
 
 \author{First Author \\
   Affiliation / Address line 1 \\
@@ -46,7 +46,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  
+This report describes \cite{huang2015translation}
 \end{abstract}
 
 \section{Introduction}
@@ -371,41 +371,7 @@ not number the acknowledgments section. Do not include this section
 when submitting your paper for review.
 
 % include your own bib file like this:
-%\bibliographystyle{acl}
-%\bibliography{acl2014}
-
-\begin{thebibliography}{}
-
-\bibitem[\protect\citename{Aho and Ullman}1972]{Aho:72}
-Alfred~V. Aho and Jeffrey~D. Ullman.
-\newblock 1972.
-\newblock {\em The Theory of Parsing, Translation and Compiling}, volume~1.
-\newblock Prentice-{Hall}, Englewood Cliffs, NJ.
-
-\bibitem[\protect\citename{{American Psychological Association}}1983]{APA:83}
-{American Psychological Association}.
-\newblock 1983.
-\newblock {\em Publications Manual}.
-\newblock American Psychological Association, Washington, DC.
-
-\bibitem[\protect\citename{{Association for Computing Machinery}}1983]{ACM:83}
-{Association for Computing Machinery}.
-\newblock 1983.
-\newblock {\em Computing Reviews}, 24(11):503--512.
-
-\bibitem[\protect\citename{Chandra \bgroup et al.\egroup }1981]{Chandra:81}
-Ashok~K. Chandra, Dexter~C. Kozen, and Larry~J. Stockmeyer.
-\newblock 1981.
-\newblock Alternation.
-\newblock {\em Journal of the Association for Computing Machinery},
-  28(1):114--133.
-
-\bibitem[\protect\citename{Gusfield}1997]{Gusfield:97}
-Dan Gusfield.
-\newblock 1997.
-\newblock {\em Algorithms on Strings, Trees and Sequences}.
-\newblock Cambridge University Press, Cambridge, UK.
-
-\end{thebibliography}
+\bibliographystyle{acl}
+\bibliography{acl2014}
 
 \end{document}
