adding book citation

--- a/reports/wordembedding/acl2014.bib
+++ b/reports/wordembedding/acl2014.bib
@@ -5,3 +5,11 @@
   pages={1084--1088},
   year={2015}
 }
+
+@misc{van1996matrix,
+  title={Matrix computations (Johns Hopkins studies in mathematical sciences)},
+  author={Van Loan, Charles F},
+  year={1996},
+  publisher={The Johns Hopkins University Press},
+  chapter = 9
+}
