completing 2 pages of my paper

--- a/reports/spokenlanguage/mybib.bib
+++ b/reports/spokenlanguage/mybib.bib
@@ -9,6 +9,13 @@
   organization={Association for Computational Linguistics}
 }
 
+@article{li2018spoken,
+  title={Spoken SQuAD: A Study of Mitigating the Impact of Speech Recognition Errors on Listening Comprehension},
+  author={Li, Chia-Hsuan and Wu, Szu-Lin and Liu, Chi-Liang and Lee, Hung-yi},
+  journal={arXiv preprint arXiv:1804.00320},
+  year={2018}
+}
+
 @article{Davis80-COP,
 	Author = {Steven B. Davis and Paul Mermelstein},
 	Journal = {IEEE Transactions on Acoustics, Speech and Signal Processing},
