--- a/reports/spokenlanguage/template.tex
+++ b/reports/spokenlanguage/template.tex
@@ -117,7 +117,10 @@ The best performing configuration after performing the same selection heuristic 
 This paper presents a new strategy to perform unsupervised clustering and supervised classification of spoken documents by proposing a method to convert speech documents into a bag of words model of pseudo-terms and then using standard NLP algorithms. The performance is quite close to manual word transcriptions, which is the theoretical upper-bound and significantly exceeds that achieved with a phonetic recognizer.
 
 \section{Spoken SQuAD: A Study of Mitigating the Impact of Speech Recognition Errors on Listening Comprehension}
-\subsection{}
+\subsection{Introduction}
+The primary motivation behind this work is the fact that humans can read plain-text documents faster than they can consume multimedia content. To put this fact in perspective, a normal reader who uses subvocalization, i.e. speaking each word internally in the mind (which can be equivalent to hearing spoken version of the text) can read approximately 250 words per minute whereas, a reader who employs visual reading, i.e. understanding the meaning of the word without speaking it loud inside the mind or hearing it can read approximately 700 words per minute. Therefore, the idea of developing a machine to understand spoken documents is very appealing.
+
+This paper
 
 \section{Paper 2}
 
