--- a/reports/spokenlanguage/mybib.bib
+++ b/reports/spokenlanguage/mybib.bib
@@ -16,6 +16,13 @@
   year={2018}
 }
 
+@article{rajpurkar2016squad,
+  title={Squad: 100,000+ questions for machine comprehension of text},
+  author={Rajpurkar, Pranav and Zhang, Jian and Lopyrev, Konstantin and Liang, Percy},
+  journal={arXiv preprint arXiv:1606.05250},
+  year={2016}
+}
+
 @article{Davis80-COP,
 	Author = {Steven B. Davis and Paul Mermelstein},
 	Journal = {IEEE Transactions on Acoustics, Speech and Signal Processing},
